config-root/namespaces/jx-production/python-http-quickstart/python-http-quickstart-python-http-quickstart-deploy.yaml
# Source: python-http-quickstart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-http-quickstart-python-http-quickstart
  labels:
    draft: draft-app
    chart: "python-http-quickstart-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'python-http-quickstart'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: python-http-quickstart-python-http-quickstart
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: python-http-quickstart-python-http-quickstart
    spec:
      serviceAccountName: python-http-quickstart-python-http-quickstart
      containers:
        - name: python-http-quickstart
          image: "gcr.io/civic-source-330323/python-http-quickstart:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
